<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_list_circle_meeting"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            tools:src="@drawable/reunion_j" />

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_list_aboutMeeting"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:singleLine="true"
                    tools:text="Réunion A" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="2dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text=" - "></TextView>

                <TextView
                    android:id="@+id/item_list_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    tools:text="14h00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="2dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text=" - "></TextView>

                <TextView
                    android:id="@+id/item_list_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:singleLine="true"
                    tools:text="Peach" />

            </LinearLayout>

            <TextView
                android:id="@+id/item_list_mails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:singleLine="true"
                tools:text="maxime@lamzone.com, alex@lamzone.com" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/item_list_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:background="@null"
            app:srcCompat="@drawable/ic_delete_white_24dp" />

    </LinearLayout>


</LinearLayout>